Update 'vsj2mdxat-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:e2cda41e7f43992024168dd7f1a14cf9f880151e@sha256:6d8f262f26a2a5da96f967515a237e06a35b08b46d49f7d4a4e20babe3c8a6c8

--- a/components/vsj2mdxat-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/vsj2mdxat-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: vsj2mdxat-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:e2cda41e7f43992024168dd7f1a14cf9f880151e@sha256:6d8f262f26a2a5da96f967515a237e06a35b08b46d49f7d4a4e20babe3c8a6c8
+          name: container-image
